k3s/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.d-kline.org`)
      kind: Rule
      middlewares:
        - name: local-only
          namespace: traefik
        - name: authelia
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: homepage
          port: 3000
  tls: {}
